--- a/questao04.html
+++ b/questao04.html
@@ -8,6 +8,19 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
     <title>Questão 04</title>
+    <style>
+        .row{
+            height: 200px;
+            background-color: rgb(255, 255, 255);
+        }
+
+        .col-4{
+            background-color: rgb(247, 201, 141);
+            padding: 20px;
+            border: solid 1px black;
+        }
+
+    </style>
 </head>
 
 <body>
@@ -17,7 +30,34 @@
         <p class="lead">Usando classes do Bootstrap 5, crie um leiaute de 3 linhas, sendo que cada linha deve conter um elemento DIV ocupando 4 colunas e cada elemento DIV deve ter volume gerado apenas por margens internas (paddings). Feito isso, usando as classes relacionadas a margens, organize os elementos DIV da seguinte forma: na primeira linha, deve estar alinhado à esquerda; na segunda linha, deve estar centralizado; e, na terceira linha, deve estar alinhado à direita.</p>
         <hr>
     </div>
-    <!-- FAZER AQUI -->
+
+<div class="container">
+<div class="row">
+<div class="col-4 align-self-start"> Coluna 1</div>
+<div class="col-4 align-self-center">Coluna 2</div>
+<div class="col-4 align-self-end">Coluna 3</div>
+
+
+
+
+
+
+
+
+
+</div>
+
+
+
+
+
+
+
+
+</div>
+
+
+
 </body>
 
 </html>
