--- a/questao08.html
+++ b/questao08.html
@@ -8,6 +8,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
     <title>Questão 08</title>
+    <style>
+        .h100{
+            height: 100vh;
+        }
+        .h400{
+            height: 100vh;
+        }
+    </style>
 </head>
 
 <body>
@@ -24,8 +32,36 @@
         <p class="lead">* Envolva as regiões com um elemento DIV das classes <i>container-fluid</i> e <i>contaner-lg</i> para cumprir os requisitos de largura da página. A classe <i>conteiner-fluid</i> faz o contêiner ocupar 100% da largura da área de visualização, enquanto a classe <i>container-lg</i> faz o contêiner ocupar a largura do breakpoint LG ou superior quando estiver nessa resolução e ficará centralizado na área de visualização.</p>
         <hr>
     </div>
-    <!-- FAZER AQUI -->
+<div class="container">
+<div class="row">
+<div class="col-12 col-lg-3 bg-dark bg-opacity-75  h400">
+    <h1 class="bg-light text-center m-3">Meu Blog</h1>
+</div>
+
+
+<div class="col-12 col-lg-9 bg-dark bg-opacity-50  h400 " > <h2 style="color: white;">Meu artigo</h2> 
     
+<p style="color: white;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae, aut quas. Culpa eius placeat nobis, fugit nulla illo quibusdam, voluptatem alias consequuntur necessitatibus molestiae explicabo sapiente omnis voluptatum dolor numquam tempora excepturi maxime odio hic consequatur accusamus, nostrum reiciendis provident. Dolore maxime incidunt molestiae explicabo minima reprehenderit sit quibusdam ducimus consectetur modi impedit, vero deleniti dolores, eligendi, deserunt ex odit magnam. Illum beatae, molestiae culpa voluptates facilis cum, mollitia possimus eius nemo voluptatum quisquam reiciendis molestias eaque voluptas nisi, unde a harum delectus ut consectetur asperiores consequatur? Illum sint culpa ex enim ullam impedit laudantium animi amet aspernatur quae. Quam.</p>
+
+<p style="color: white;" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores fuga ad architecto rerum quae eos omnis corrupti ullam! Eveniet vel ipsum soluta dolore sequi quisquam, doloremque suscipit adipisci laboriosam libero earum natus inventore illum facere eius nobis ipsa eos porro? Sapiente magnam, corrupti dicta doloribus dolor repudiandae iste cumque possimus suscipit quisquam cupiditate vel ipsam unde mollitia error fugiat neque distinctio quidem in. Ducimus harum doloribus dicta doloremque reprehenderit, voluptates fuga! Nesciunt culpa aut enim inventore dolores illo odit voluptate eum nemo. Non, voluptates alias? Dignissimos laboriosam aliquam adipisci! Architecto nulla, neque distinctio incidunt delectus molestias earum necessitatibus atque quas!</p>
+
+<p style="color: white;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo deleniti rerum, ipsa doloribus eveniet, ullam rem perferendis quod animi consectetur officiis magnam quis eaque doloremque voluptatibus amet quam laboriosam blanditiis tempora fuga id cupiditate corrupti repellat. Reprehenderit pariatur, impedit debitis ipsum eligendi repudiandae autem similique sed ducimus quidem dolorem quis dolorum quia provident quas fugiat quisquam laudantium nam expedita, tempore, eveniet rerum. Laudantium, animi. Minus, saepe libero doloribus eligendi consectetur impedit molestiae sed placeat. Voluptates maiores modi, assumenda sequi labore porro quis consequatur enim officiis eos vero doloremque ullam dolore amet dolorem vel minima repellendus. Beatae voluptatum quo at magnam!</p>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+</div>
+
+
+</div>    
 </body>
 
 </html>
